add assets and make 404page looks slightly nicer

--- a/views/error.erb
+++ b/views/error.erb
@@ -1,6 +1,27 @@
-<h1>While treading the jungles of the interwebs..</h1>
-<h2>Our expert adventurers still manage to get lost</h2>
-
-<p>
-    Let's try something else. Maybe something easier for them.
-</p>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="/stylesheet/notfound.css">
+<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="/stylesheet/font/junglefever/stylesheet.css" charset="utf-8">
+</head>
+<body>
+<div class='title'>
+    <h1>4-Oh-oh-4</h1>
+</div>
+<div class='container'>
+    <div class='image-frame'>
+        <img src='/image/notfound.jpg' class='lostimage'>
+    </div>
+    <div class='story-board'>
+        <div class='intro'>
+            While treading the jungles of Interweb...
+        </div>
+        <div class='punchline'>Our expert adventurers still manage to get lost</div>
+    </div>
+    <div class='suggestion'>
+        Let's try something else. Maybe something easier for them.
+    </div>
+</div>
+</body>
+</html>
