--- a/views/error.erb
+++ b/views/error.erb
@@ -4,6 +4,7 @@
 <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/stylesheet/font/junglefever/stylesheet.css" charset="utf-8">
+<title>404 PiggyBanker</title>
 </head>
 <body>
 <div class='title'>
